--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,8 @@
   <body>
     <div class="main-content">
       {{>header}}
+
+      <p>This site was created by Cahyo Susilo. It uses data from mapbox.com and weatherstack.com!</p>
     <img class="potrait" src="/img/robot.png" />
     </div>
 
