NodeJS Weather App Bahasa Indonesia

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>About</title>
+    <title>Tentang</title>
     <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css" />
     <script src="/js/app.js"></script>
@@ -9,7 +9,7 @@
     <div class="main-content">
       {{>header}}
 
-      <p>This site was created by Cahyo Susilo. It uses data from mapbox.com and weatherstack.com!</p>
+      <p>Situs ini dibuat oleh Cahyo Susilo. Menggunakan data dari mapbox.com dan openweathermap.org!</p>
     <img class="potrait" src="/img/robot.png" />
     </div>
 
