--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Weather</title>
+    <title>Layanan Cuaca</title>
     <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
@@ -8,7 +8,7 @@
     <div class="main-content">
       {{>header}}
 
-      <p>Use this site to get your weather</p>
+      <p>Gunakan situs ini untuk mengetahui cuaca di daerah Anda.</p>
 
       <form>
         <input placeholder="Location">
